--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Kho Công Cụ Toán học & GVCN – Auto Menu</title>
+  <title>📚📚📚Kho Công Cụ Toán học & GVCN – Auto Menu</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
