--- a/tools/tien-ich/tonghop.html
+++ b/tools/tien-ich/tonghop.html
@@ -10,6 +10,7 @@
     --bg:#f6f7fb; --panel:#ffffff; --fg:#0f172a; --muted:#64748b; --brand:#2563eb; --ring:#93c5fd;
     --card:#ffffff; --border:#e5e7eb; --shadow:0 10px 30px rgba(2,6,23,.08);
     --chip:#eef2ff; --chipText:#3730a3;
+    --danger:#ef4444; --warn:#f59e0b;
   }
   .dark{
     --bg:#0b1220; --panel:#0f172a; --fg:#e5e7eb; --muted:#94a3b8; --brand:#60a5fa; --ring:#1d4ed8;
@@ -36,7 +37,7 @@
   .btn.small{padding:6px 10px;border-radius:10px}
   .chip{display:inline-flex;gap:6px;align-items:center;background:var(--chip);color:var(--chipText);border:1px solid var(--border);border-radius:999px;padding:6px 10px;font-size:12px;cursor:pointer}
   .chip.active{outline:2px solid var(--brand)}
-  main{max-width:1200px;margin:20px auto;padding:0 20px 80px}
+  main{max-width:1200px;margin:20px auto;padding:0 20px 100px}
   .topbar{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-bottom:10px}
   .preview{border:1px solid var(--border);border-radius:14px;background:var(--panel);box-shadow:var(--shadow);padding:12px}
   canvas{width:100%;aspect-ratio:16/9;display:block;border-radius:12px;background:linear-gradient(180deg, rgba(99,102,241,.06), transparent)}
@@ -44,14 +45,14 @@
   .grid{display:grid;grid-template-columns:repeat(1,minmax(0,1fr));gap:12px}
   @media(min-width:680px){.grid{grid-template-columns:repeat(2,minmax(0,1fr))}}
   @media(min-width:1024px){.grid{grid-template-columns:repeat(3,minmax(0,1fr))}}
-  .card{border:1px solid var(--border);background:var(--card);border-radius:14px;padding:14px;box-shadow:var(--shadow);transition:transform .15s ease, background .2s ease;cursor:pointer;position:relative}
+  .card{border:1px solid var(--border);background:var(--card);border-radius:14px;padding:14px;box-shadow:var(--shadow);transition:transform .15s ease, background .2s ease;position:relative}
   .card:hover{transform:translateY(-3px)}
   .ttl{font-weight:700;font-size:15px;display:flex;gap:8px;align-items:center}
   .desc{color:var(--muted);font-size:13px;margin-top:6px;min-height:36px}
   .ext{margin-left:auto;opacity:.7}
-  .meta{display:flex;gap:8px;align-items:center;margin-top:8px;flex-wrap:wrap}
-  .meta .star{cursor:pointer}
-  .meta .copy{cursor:pointer}
+  .meta{display:flex;gap:10px;align-items:center;margin-top:8px;flex-wrap:wrap}
+  .icon{cursor:pointer;user-select:none}
+  .icon.disabled{opacity:.35;cursor:not-allowed}
   .badge{display:inline-flex;gap:6px;align-items:center;color:var(--muted);font-size:12px;margin-left:6px}
   .tagbar{display:flex;gap:8px;flex-wrap:wrap;margin:10px 0}
   .panel{border:1px solid var(--border);background:var(--panel);border-radius:12px;padding:10px;box-shadow:var(--shadow)}
@@ -59,6 +60,11 @@
   @media(min-width:1024px){.col2{grid-template-columns:2fr 1fr}}
   footer{border-top:1px solid var(--border);color:var(--muted);text-align:center;padding:20px}
   .sr{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+  dialog{border:1px solid var(--border);border-radius:12px;padding:14px;max-width:520px;width:calc(100% - 2rem);box-shadow:var(--shadow);background:var(--panel);color:var(--fg)}
+  dialog::backdrop{background:rgba(0,0,0,.35)}
+  .row{display:grid;gap:8px;margin:8px 0}
+  .row input, .row textarea{width:100%;border:1px solid var(--border);border-radius:10px;padding:8px;background:var(--card);color:var(--fg)}
+  .danger{color:var(--danger);font-weight:600}
 </style>
 </head>
 <body>
@@ -137,6 +143,33 @@
 
 <footer>© 2025 – GV: Vũ Tiến Lực – Trang tổng hợp công cụ & tin tức Toán học</footer>
 
+<!-- EDIT / DELETE DIALOGS -->
+<dialog id="editDlg">
+  <form method="dialog">
+    <h3>✏️ Sửa mục</h3>
+    <div class="row"><label>Tiêu đề<input id="editTitle"></label></div>
+    <div class="row"><label>URL<input id="editPath"></label></div>
+    <div class="row"><label>Mô tả<textarea id="editDesc" rows="3"></textarea></label></div>
+    <div class="row"><label>Tags (phân tách dấu ,)<input id="editTags"></label></div>
+    <div class="row" style="display:flex;gap:8px;justify-content:flex-end">
+      <button class="btn" value="cancel">Huỷ</button>
+      <button class="btn" id="btnSaveEdit" value="default">Lưu</button>
+    </div>
+  </form>
+</dialog>
+
+<dialog id="confirmDlg">
+  <form method="dialog">
+    <h3 class="danger">⚠️ Xác nhận thao tác</h3>
+    <p id="confirmMsg">Nhập <code>DELETE</code> để xác nhận.</p>
+    <div class="row"><input id="confirmInput" placeholder="Gõ DELETE" autocomplete="off"></div>
+    <div class="row" style="display:flex;gap:8px;justify-content:flex-end">
+      <button class="btn" value="cancel">Huỷ</button>
+      <button class="btn" id="btnConfirm" value="default">Xác nhận</button>
+    </div>
+  </form>
+</dialog>
+
 <script>
 /* ================== DỮ LIỆU MẪU (có tags) ================== */
 const baseData = {
@@ -171,6 +204,7 @@ const elQ = document.getElementById('q');
 const elCount = document.getElementById('countBadge');
 const elTagbar = document.getElementById('tagbar');
 let favOnly = false;
+let editingContext = null; // {source, tab, origPath}
 
 function loadData(){
   const custom = JSON.parse(localStorage.getItem('customData')||'{}');
@@ -181,9 +215,8 @@ function loadData(){
   }
   return merged;
 }
-function saveCustom(data){
-  localStorage.setItem('customData', JSON.stringify(data));
-}
+function loadCustom(){ return JSON.parse(localStorage.getItem('customData')||'{}'); }
+function saveCustom(data){ localStorage.setItem('customData', JSON.stringify(data)); }
 function getFavSet(){ return new Set(JSON.parse(localStorage.getItem('favorites')||'[]')); }
 function setFavSet(s){ localStorage.setItem('favorites', JSON.stringify([...s])); }
 function pushRecent(item){
@@ -193,6 +226,8 @@ function pushRecent(item){
   filtered.unshift({...item, ts:Date.now()});
   localStorage.setItem('recents', JSON.stringify(filtered.slice(0,12)));
 }
+function getHidden(){ return new Set(JSON.parse(localStorage.getItem('hiddenPaths')||'[]')); }
+function setHidden(set){ localStorage.setItem('hiddenPaths', JSON.stringify([...set])); }
 
 /* ================== MODE (Dark/Projector) ================== */
 (function initMode(){
@@ -260,12 +295,9 @@ function allItems(){
   return Object.keys(d).flatMap(k => d[k].map(x => ({...x, _tab:k})));
 }
 function isFav(it){ return getFavSet().has(it.path); }
-function getRecents(){
-  return JSON.parse(localStorage.getItem('recents')||'[]');
-}
-function activeTags(){
-  return new Set((new URLSearchParams(location.hash.slice(1))).getAll('tag'));
-}
+function getRecents(){ return JSON.parse(localStorage.getItem('recents')||'[]'); }
+function activeTags(){ return new Set((new URLSearchParams(location.hash.slice(1))).getAll('tag')); }
+
 function render(draw=true){
   const d = loadData();
   let list = [];
@@ -273,9 +305,11 @@ function render(draw=true){
   else if(currentTab==='recents'){ list = getRecents(); }
   else { list = d[currentTab] || []; }
 
-  // search
+  // search + hidden filter
   const q = (elQ.value||'').trim().toLowerCase();
+  const hidden = getHidden();
   list = list.filter(it=>{
+    if(hidden.has(it.path)) return false;
     const hay = (it.title||'')+' '+(it.desc||' ')+' '+(it.tags||[]).join(' ');
     if(q && !hay.toLowerCase().includes(q)) return false;
     if(favOnly && !isFav(it)) return false;
@@ -291,51 +325,164 @@ function render(draw=true){
   const favs = getFavSet();
   elList.innerHTML='';
   elCount.textContent = `${list.length} mục`;
-  list.forEach((it, idx)=>{
+  list.forEach((it)=>{
     const card = document.createElement('article');
     card.className='card';
     card.tabIndex=0;
-    card.setAttribute('role','button');
-    card.setAttribute('aria-label', `${it.title}. Bấm Enter để mở.`);
+    card.setAttribute('role','group');
     const fav = favs.has(it.path);
+    const inCustom = (loadCustom()[it._tab||currentTab]||[]).some(c=>c.path===it.path);
     const tags = (it.tags||[]).map(t=>`<span class="chip" style="pointer-events:none">${t}</span>`).join(' ');
     card.innerHTML = `
       <div class="ttl">
-        <span>🔗</span>
+        <span class="icon open" title="Mở (Enter)">🔗</span>
         <span>${it.title}</span>
         <span class="ext" title="Liên kết ngoài">↗</span>
       </div>
       <div class="desc">${it.desc||''}</div>
       <div class="meta">
-        <span class="star" title="Đánh dấu yêu thích">${fav?'⭐':'☆'}</span>
-        <span class="copy" title="Sao chép liên kết">📋</span>
+        <span class="icon star" title="Đánh dấu yêu thích">${fav?'⭐':'☆'}</span>
+        <span class="icon copy" title="Sao chép liên kết">📋</span>
+        <span class="icon edit ${inCustom?'':'disabled'}" title="${inCustom? 'Sửa mục (tuỳ chỉnh)':'Sao chép & sửa (tạo bản tuỳ chỉnh)'}">✏️</span>
+        <span class="icon del" title="${inCustom? 'Xoá mục tuỳ chỉnh':'Ẩn mục này khỏi danh sách'}">🗑️</span>
         ${tags?`<div style="margin-left:auto;display:flex;gap:6px;flex-wrap:wrap">${tags}</div>`:''}
       </div>
     `;
+
     // events
-    card.addEventListener('click', (e)=>{
-      const t = e.target;
-      if(t.classList.contains('star')){
-        const set = getFavSet();
-        if(set.has(it.path)) set.delete(it.path); else set.add(it.path);
-        setFavSet(set); render(false); return;
-      }
-      if(t.classList.contains('copy')){
-        navigator.clipboard?.writeText(it.path);
-        t.textContent='✅'; setTimeout(()=>t.textContent='📋', 800);
-        return;
-      }
-      openTool(it, e.ctrlKey||e.metaKey);
-    });
+    card.querySelector('.open').addEventListener('click',()=>openTool(it,false));
     card.addEventListener('keydown', (e)=>{
       if(e.key==='Enter' && (e.metaKey||e.ctrlKey)){ e.preventDefault(); openTool(it, true); }
       else if(e.key==='Enter'){ e.preventDefault(); openTool(it, false); }
     });
+
+    card.querySelector('.star').addEventListener('click', ()=>{
+      const set = getFavSet(); set.has(it.path)? set.delete(it.path): set.add(it.path); setFavSet(set); render(false);
+    });
+    card.querySelector('.copy').addEventListener('click', (e)=>{
+      navigator.clipboard?.writeText(it.path); e.target.textContent='✅'; setTimeout(()=>e.target.textContent='📋', 800);
+    });
+
+    // edit
+    card.querySelector('.edit').addEventListener('click', (e)=>{
+      const inCustomNow = (loadCustom()[it._tab||currentTab]||[]).some(c=>c.path===it.path);
+      if(!inCustomNow){
+        // clone base -> custom then open editor
+        confirmCloneBase(it).then(ok=>{ if(ok){ openEditDialog({...it, _tab: it._tab||currentTab}); }});
+      } else {
+        openEditDialog({...it, _tab: it._tab||currentTab});
+      }
+    });
+
+    // delete / hide with advanced confirmation
+    card.querySelector('.del').addEventListener('click', async ()=>{
+      const tab = it._tab||currentTab;
+      const custom = loadCustom();
+      const inCustomNow = (custom[tab]||[]).some(c=>c.path===it.path);
+      if(inCustomNow){
+        const ok = await confirmByTyping('Gõ DELETE để xoá mục tuỳ chỉnh này vĩnh viễn.', 'DELETE');
+        if(ok){
+          custom[tab] = (custom[tab]||[]).filter(c=>c.path!==it.path);
+          saveCustom(custom); render(false);
+        }
+      }else{
+        const ok = await confirmByTyping('Gõ DELETE để ẨN mục gốc này khỏi danh sách (có thể khôi phục bằng cách xoá hiddenPaths trong LocalStorage).', 'DELETE');
+        if(ok){
+          const hid = getHidden(); hid.add(it.path); setHidden(hid); render(false);
+        }
+      }
+    });
+
     elList.appendChild(card);
   });
 
   renderTags();
   if(draw) drawPreviewTitle(currentTab);
+}
+
+/* ================== EDIT DIALOG ================== */
+const dlg = document.getElementById('editDlg');
+const fTitle = document.getElementById('editTitle');
+const fPath  = document.getElementById('editPath');
+const fDesc  = document.getElementById('editDesc');
+const fTags  = document.getElementById('editTags');
+
+function openEditDialog(item){
+  editingContext = { source: 'custom', tab: item._tab, origPath: item.path };
+  fTitle.value = item.title||'';
+  fPath.value  = item.path||'';
+  fDesc.value  = item.desc||'';
+  fTags.value  = (item.tags||[]).join(', ');
+  dlg.showModal();
+}
+
+document.getElementById('btnSaveEdit').addEventListener('click', (e)=>{
+  e.preventDefault(); // prevent dialog close by default
+  const title = fTitle.value.trim();
+  const path  = fPath.value.trim();
+  const desc  = fDesc.value.trim();
+  const tags  = fTags.value.split(',').map(s=>s.trim()).filter(Boolean);
+  if(!title || !/^https?:\/\//i.test(path)) { alert('Vui lòng nhập Tiêu đề và URL hợp lệ.'); return; }
+  const custom = loadCustom();
+  const tab = editingContext.tab;
+  if(!custom[tab]) custom[tab]=[];
+  // If path changed, ensure no duplicate
+  if(path !== editingContext.origPath && (custom[tab].some(i=>i.path===path) || (baseData[tab]||[]).some(i=>i.path===path))){
+    alert('Đã tồn tại mục với URL này.'); return;
+  }
+  // update or insert
+  const idx = custom[tab].findIndex(i=>i.path===editingContext.origPath);
+  const payload = {title, path, desc, tags};
+  if(idx>=0) custom[tab][idx] = payload; else custom[tab].push(payload);
+  saveCustom(custom);
+  dlg.close(); render(true);
+});
+
+dlg.addEventListener('close', ()=>{ editingContext=null; });
+
+/* ================== CONFIRMATION DIALOG (TYPE TO CONFIRM) ================== */
+const confirmDlg = document.getElementById('confirmDlg');
+const confirmMsg = document.getElementById('confirmMsg');
+const confirmInput = document.getElementById('confirmInput');
+const btnConfirm = document.getElementById('btnConfirm');
+
+function confirmByTyping(message='Nhập DELETE để xác nhận.', keyword='DELETE'){
+  return new Promise(resolve=>{
+    confirmMsg.textContent = message + '';
+    confirmInput.value='';
+    confirmInput.placeholder = `Gõ ${keyword}`;
+    const onClose = ()=>{ cleanup(); resolve(false); };
+    const onSubmit = (e)=>{
+      e.preventDefault();
+      const ok = confirmInput.value.trim() === keyword;
+      if(ok){ cleanup(); confirmDlg.close('ok'); resolve(true); }
+      else {
+        confirmInput.style.borderColor = getComputedStyle(document.documentElement).getPropertyValue('--danger');
+        confirmInput.focus();
+      }
+    };
+    function cleanup(){
+      confirmDlg.removeEventListener('close', onClose);
+      btnConfirm.removeEventListener('click', onSubmit);
+      confirmInput.style.borderColor = '';
+    }
+    confirmDlg.addEventListener('close', onClose, {once:true});
+    btnConfirm.addEventListener('click', onSubmit);
+    confirmDlg.showModal();
+    setTimeout(()=>confirmInput.focus(), 50);
+  });
+}
+function confirmCloneBase(item){
+  return new Promise(resolve=>{
+    const msg = `Mục này thuộc dữ liệu gốc. Gõ DELETE để tạo một bản tuỳ chỉnh rồi tiến hành sửa.`;
+    confirmByTyping(msg,'DELETE').then(ok=>{
+      if(ok){
+        const custom = loadCustom();
+        const tab = item._tab||currentTab; if(!custom[tab]) custom[tab]=[];
+        custom[tab].push({...item}); saveCustom(custom); resolve(true);
+      } else { resolve(false); }
+    });
+  });
 }
 
 /* ================== CANVAS ================== */
@@ -429,7 +576,7 @@ function addQuick(){
   const tags  = document.getElementById('addTags').value.trim().split(',').map(s=>s.trim()).filter(Boolean);
   const tab   = document.getElementById('addTab').value;
   if(!title || !/^https?:\/\//i.test(path)){ alert('Vui lòng nhập Tiêu đề và URL hợp lệ (http/https).'); return;}
-  const custom = JSON.parse(localStorage.getItem('customData')||'{}');
+  const custom = loadCustom();
   if(!custom[tab]) custom[tab]=[];
   // tránh trùng path
   if(custom[tab].some(i=>i.path===path) || (baseData[tab]||[]).some(i=>i.path===path)){
@@ -455,19 +602,25 @@ window.addEventListener('keydown', (e)=>{
 
 /* ================== INIT ================== */
 render(true);
-// FIX: use correct case-sensitive function name
-drawPreviewTitle?.noop; // guard (optional chaining prevents ReferenceError)
+drawPreviewTitle?.noop; // guard
 function drawPreviewTitleGuard(){ try{ drawPreviewTitle('toan10'); } catch(e){} }
 
 /* ================== SELF TESTS ================== */
 (function(){
   const tests = [];
-  const assert = (name, fn) => {
-    try { fn(); tests.push({name, ok:true}); }
-    catch(e){ console.error('Test failed:', name, e); tests.push({name, ok:false, err: String(e)}); }
-  };
+  const assert = (name, fn) => { try { fn(); tests.push({name, ok:true}); } catch(e){ console.error('Test failed:', name, e); tests.push({name, ok:false, err: String(e)}); } };
   assert('drawPreviewTitle exists', ()=>{ if (typeof drawPreviewTitle !== 'function') throw new Error('missing'); });
   assert('drawPreviewTitle runs for toan10', ()=>{ drawPreviewTitle('toan10'); });
+  // new tests for edit/delete
+  assert('custom addQuick prevents duplicate path', ()=>{
+    const custom = loadCustom(); const tab='tools'; if(!custom[tab]) custom[tab]=[];
+    const sample = {title:'Tmp', path:'https://example.com/tmp', desc:'', tags:[]};
+    const had = custom[tab].some(i=>i.path===sample.path) || (baseData[tab]||[]).some(i=>i.path===sample.path);
+    if(!had){ custom[tab].push(sample); saveCustom(custom); }
+    const dup = loadCustom(); if(!dup[tab]) throw new Error('lost tab');
+    const cnt = dup[tab].filter(i=>i.path===sample.path).length; if(cnt>1) throw new Error('duplicate allowed');
+  });
+  assert('confirmByTyping is function', ()=>{ if(typeof confirmByTyping !== 'function') throw new Error('missing confirmByTyping'); });
   console.log('Self-tests:', tests);
 })();
 
