--- a/tools/tien-ich/tonghop.html
+++ b/tools/tien-ich/tonghop.html
@@ -173,27 +173,150 @@
 <script>
 /* ================== DỮ LIỆU MẪU (có tags) ================== */
 const baseData = {
-  "toan10":[
-    {"title":"I-1: Khái niệm vectơ","path":"https://www.congcutoanhoc.com/congcu/vecto/vecto.html","desc":"Thành phần vectơ; điểm đầu/cuối, phương, chiều, độ dài.","tags":["hinh hoc","vector"]},
-    {"title":"I-2: Tính toán với vectơ","path":"https://www.congcutoanhoc.com/congcu/vecto/tinhvecto.html","desc":"Cộng, trừ, nhân vectơ; ví dụ tương tác.","tags":["hinh hoc","vector","thuc hanh"]}
+  "toan10": [
+    {
+      "title": "I-1: Khái niệm vectơ",
+      "path": "https://www.congcutoanhoc.com/congcu/vecto/vecto.html",
+      "desc": "Thành phần vectơ; điểm đầu/cuối, phương, chiều, độ dài.",
+      "tags": [
+        "hinh hoc",
+        "vector"
+      ]
+    },
+    {
+      "title": "I-2: Tính toán với vectơ",
+      "path": "https://www.congcutoanhoc.com/congcu/vecto/tinhvecto.html",
+      "desc": "Cộng, trừ, nhân vectơ; ví dụ tương tác.",
+      "tags": [
+        "hinh hoc",
+        "vector",
+        "thuc hanh"
+      ]
+    },
+    {
+      "title": "III-GIẢI TAM GIÁC",
+      "path": "https://congcutoanhoc.com/congcu/giaitamgiac/giaitamgiac.html",
+      "desc": "GIẢI TAM GIÁC",
+      "tags": [
+        "hethucluong",
+        "cosin",
+        "sin"
+      ]
+    }
   ],
-  "toan11":[
-    {"title":"III-1: Hàm số lượng giác","path":"https://www.congcutoanhoc.com/congcu/hamluonggiac/hamluonggiac.html","desc":"Đồ thị sin, cos, tan, cot; chu kỳ – biên độ.","tags":["luong giac","do thi"]},
-    {"title":"III-2: Tổ hợp – Xác suất","path":"https://www.congcutoanhoc.com/congcu/xacsuat/xacsuat.html","desc":"Mô phỏng xác suất; luật số lớn.","tags":["xac suat","thong ke"]}
+  "toan11": [
+    {
+      "title": "III-1: Hàm số lượng giác",
+      "path": "https://www.congcutoanhoc.com/congcu/hamluonggiac/hamluonggiac.html",
+      "desc": "Đồ thị sin, cos, tan, cot; chu kỳ – biên độ.",
+      "tags": [
+        "luong giac",
+        "do thi"
+      ]
+    },
+    {
+      "title": "III-2: Tổ hợp – Xác suất",
+      "path": "https://www.congcutoanhoc.com/congcu/xacsuat/xacsuat.html",
+      "desc": "Mô phỏng xác suất; luật số lớn.",
+      "tags": [
+        "xac suat",
+        "thong ke"
+      ]
+    }
   ],
-  "toan12":[
-    {"title":"IV-3: Giải tam giác 2","path":"https://www.congcutoanhoc.com/congcu/giaitamgiac/giaitamgiac.html","desc":"Định lý sin – cos; dựng hình.","tags":["hinh hoc","giai tam giac"]},
-    {"title":"IV-4: Đường tiệm cận hàm số","path":"https://www.congcutoanhoc.com/congcu/tiemcan/tiemcan.html","desc":"Tiệm cận đứng, ngang, xiên.","tags":["giai tich","do thi"]}
+  "toan12": [
+    {
+      "title": "IV-3: Giải tam giác 2",
+      "path": "https://www.congcutoanhoc.com/congcu/giaitamgiac/giaitamgiac.html",
+      "desc": "Định lý sin – cos; dựng hình.",
+      "tags": [
+        "hinh hoc",
+        "giai tam giac"
+      ]
+    },
+    {
+      "title": "IV-4: Đường tiệm cận hàm số",
+      "path": "https://www.congcutoanhoc.com/congcu/tiemcan/tiemcan.html",
+      "desc": "Tiệm cận đứng, ngang, xiên.",
+      "tags": [
+        "giai tich",
+        "do thi"
+      ]
+    },
+    {
+      "title": "TỌA ĐỘ HÌNH CHIẾU",
+      "path": "https://congcutoanhoc.com/congcu/toadovt/index.html",
+      "desc": "Xác định  tọa độ hình chiếu điểm trên Oxyz",
+      "tags": [
+        "Oxyz"
+      ]
+    }
   ],
-  "tools":[
-    {"title":"GeoGebra","path":"https://www.geogebra.org/","desc":"Công cụ hình học/đại số tương tác.","tags":["tool","hinh hoc","do thi"]},
-    {"title":"Desmos","path":"https://www.desmos.com/","desc":"Đồ thị hàm, hoạt động lớp học.","tags":["tool","do thi"]},
-    {"title":"Wolfram Alpha","path":"https://www.wolframalpha.com/","desc":"Tính toán + tri thức.","tags":["tool","CAS"]}
+  "tools": [
+    {
+      "title": "GeoGebra",
+      "path": "https://www.geogebra.org/",
+      "desc": "Công cụ hình học/đại số tương tác.",
+      "tags": [
+        "tool",
+        "hinh hoc",
+        "do thi"
+      ]
+    },
+    {
+      "title": "Desmos",
+      "path": "https://www.desmos.com/",
+      "desc": "Đồ thị hàm, hoạt động lớp học.",
+      "tags": [
+        "tool",
+        "do thi"
+      ]
+    },
+    {
+      "title": "Wolfram Alpha",
+      "path": "https://www.wolframalpha.com/",
+      "desc": "Tính toán + tri thức.",
+      "tags": [
+        "tool",
+        "CAS"
+      ]
+    },
+    {
+      "title": "Tmp",
+      "path": "https://example.com/tmp",
+      "desc": "",
+      "tags": []
+    }
   ],
-  "news":[
-    {"title":"Toán học & ứng dụng – Tạp chí","path":"https://toanhocungdung.vn/","desc":"Tin/bài toán học ứng dụng.","tags":["news","vn"]},
-    {"title":"VnExpress – Khoa học/Toán","path":"https://vnexpress.net/khoa-hoc/toan-hoc","desc":"Mục Toán học của VnExpress.","tags":["news","vn"]},
-    {"title":"MathVN Blog","path":"https://mathvn.net/","desc":"Bài viết, mẹo, thảo luận.","tags":["news","blog","vn"]}
+  "news": [
+    {
+      "title": "Toán học & ứng dụng – Tạp chí",
+      "path": "https://toanhocungdung.vn/",
+      "desc": "Tin/bài toán học ứng dụng.",
+      "tags": [
+        "news",
+        "vn"
+      ]
+    },
+    {
+      "title": "VnExpress – Khoa học/Toán",
+      "path": "https://vnexpress.net/khoa-hoc/toan-hoc",
+      "desc": "Mục Toán học của VnExpress.",
+      "tags": [
+        "news",
+        "vn"
+      ]
+    },
+    {
+      "title": "MathVN Blog",
+      "path": "https://mathvn.net/",
+      "desc": "Bài viết, mẹo, thảo luận.",
+      "tags": [
+        "news",
+        "blog",
+        "vn"
+      ]
+    }
   ]
 };
 
