--- a/tools/tien-ich/tonghop.html
+++ b/tools/tien-ich/tonghop.html
@@ -214,17 +214,84 @@
 <script>
 /* ================== DỮ LIỆU MẪU (có tags) ================== */
 const baseData = {
-  "toan10":[
-    {"title":"I-1: Khái niệm vectơ","path":"https://www.congcutoanhoc.com/congcu/vecto/vecto.html","desc":"Thành phần vectơ; điểm đầu/cuối, phương, chiều, độ dài.","tags":["hinh hoc","vector"]},
-    {"title":"I-2: Tính toán với vectơ","path":"https://www.congcutoanhoc.com/congcu/vecto/tinhvecto.html","desc":"Cộng, trừ, nhân vectơ; ví dụ tương tác.","tags":["hinh hoc","vector","thuc hanh"]}
+ "toan10": [
+    {
+      "title": "I-1: Khái niệm vectơ",
+      "path": "https://www.congcutoanhoc.com/congcu/vecto/vecto.html",
+      "desc": "Thành phần vectơ; điểm đầu/cuối, phương, chiều, độ dài.",
+      "tags": [
+        "hinh hoc",
+        "vector"
+      ]
+    },
+    {
+      "title": "I-2: Tính toán với vectơ",
+      "path": "https://www.congcutoanhoc.com/congcu/vecto/tinhvecto.html",
+      "desc": "Cộng, trừ, nhân vectơ; ví dụ tương tác.",
+      "tags": [
+        "hinh hoc",
+        "vector",
+        "thuc hanh"
+      ]
+    },
+    {
+      "title": "III-GIẢI TAM GIÁC",
+      "path": "https://congcutoanhoc.com/congcu/giaitamgiac/giaitamgiac.html",
+      "desc": "GIẢI TAM GIÁC",
+      "tags": [
+        "hethucluong",
+        "cosin",
+        "sin"
+      ]
+    }
   ],
-  "toan11":[
-    {"title":"III-1: Hàm số lượng giác","path":"https://www.congcutoanhoc.com/congcu/hamluonggiac/hamluonggiac.html","desc":"Đồ thị sin, cos, tan, cot; chu kỳ – biên độ.","tags":["luong giac","do thi"]},
-    {"title":"III-2: Tổ hợp – Xác suất","path":"https://www.congcutoanhoc.com/congcu/xacsuat/xacsuat.html","desc":"Mô phỏng xác suất; luật số lớn.","tags":["xac suat","thong ke"]}
+  "toan11": [
+    {
+      "title": "III-1: Hàm số lượng giác",
+      "path": "https://www.congcutoanhoc.com/congcu/hamluonggiac/hamluonggiac.html",
+      "desc": "Đồ thị sin, cos, tan, cot; chu kỳ – biên độ.",
+      "tags": [
+        "luong giac",
+        "do thi"
+      ]
+    },
+    {
+      "title": "III-2: Tổ hợp – Xác suất",
+      "path": "https://www.congcutoanhoc.com/congcu/xacsuat/xacsuat.html",
+      "desc": "Mô phỏng xác suất; luật số lớn.",
+      "tags": [
+        "xac suat",
+        "thong ke"
+      ]
+    }
   ],
-  "toan12":[
-    {"title":"IV-3: Giải tam giác 2","path":"https://www.congcutoanhoc.com/congcu/giaitamgiac/giaitamgiac.html","desc":"Định lý sin – cos; dựng hình.","tags":["hinh hoc","giai tam giac"]},
-    {"title":"IV-4: Đường tiệm cận hàm số","path":"https://www.congcutoanhoc.com/congcu/tiemcan/tiemcan.html","desc":"Tiệm cận đứng, ngang, xiên.","tags":["giai tich","do thi"]}
+  "toan12": [
+    {
+      "title": "IV-3: Giải tam giác 2",
+      "path": "https://www.congcutoanhoc.com/congcu/giaitamgiac/giaitamgiac.html",
+      "desc": "Định lý sin – cos; dựng hình.",
+      "tags": [
+        "hinh hoc",
+        "giai tam giac"
+      ]
+    },
+    {
+      "title": "IV-4: Đường tiệm cận hàm số",
+      "path": "https://www.congcutoanhoc.com/congcu/tiemcan/tiemcan.html",
+      "desc": "Tiệm cận đứng, ngang, xiên.",
+      "tags": [
+        "giai tich",
+        "do thi"
+      ]
+    },
+    {
+      "title": "TỌA ĐỘ HÌNH CHIẾU",
+      "path": "https://congcutoanhoc.com/congcu/toadovt/index.html",
+      "desc": "Xác định  tọa độ hình chiếu điểm trên Oxyz",
+      "tags": [
+        "Oxyz"
+      ]
+    }
   ],
   "tools":[
     {"title":"GeoGebra","path":"https://www.geogebra.org/","desc":"Công cụ hình học/đại số tương tác.","tags":["tool","hinh hoc","do thi"]},
